--- a/hello.html
+++ b/hello.html
@@ -6,11 +6,7 @@
     <title>Hello!</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>Welcome to my website!</h1>
-=======
-    <h1 style="color:blue;">Welcome to my website</h1>
->>>>>>> b621ba02839b5d9d9569b7a2135b53c4cbf290c1
+    <h1 style="color:blue;">Welcome to my website!</h1>
     <h2>Hello</h2>
     Hello, world!
 </body>
